Removendo vazamentos de memória

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,14 @@
         "bitset": "cpp",
         "cstdarg": "cpp",
         "cstring": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "cerrno": "cpp",
+        "cfloat": "cpp",
+        "climits": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "cstdbool": "cpp"
     }
 }
